force-app/main/default/objects/BasiqEntityAccount_v2__c/BasiqEntityAccount_v2__c.object-meta.xml
<CustomObject>
    <label>Basiq Entity Account</label>
    <nameField>
        <label>Basiq Entity Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Basiq Entity Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>