force-app/main/default/objects/BasiqEntityAccount_v2__c/fields/AccountHolder__c.field-meta.xml
<CustomField>
    <fullName>AccountHolder__c</fullName>
    <label>Account Holder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>