force-app/main/default/objects/BasiqEntityAccount_v2__c/fields/BasiqAccountId__c.field-meta.xml
<CustomField>
    <fullName>BasiqAccountId__c</fullName>
    <label>Basiq Account Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>