force-app/main/default/objects/BasiqEntityAccount_v2__c/fields/BasiqEntityConnection__c.field-meta.xml
<CustomField>
    <fullName>BasiqEntityConnection__c</fullName>
    <label>Basiq Entity Connection</label>
    <referenceTo>BasiqEntityConnection_v2__c</referenceTo>
    <relationshipLabel>Basiq Entity Accounts</relationshipLabel>
    <relationshipName>Basiq_Entity_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>