force-app/main/default/objects/BasiqEntityAccount_v2__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Basiq Entity Accounts</relationshipLabel>
    <relationshipName>Basiq_Entity_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>